crates/agent_fold/src/domain/test/snapshots/agent_fold__domain__test__real_recordings__plan_todo.snap
---
source: crates/agent_fold/src/domain/test/real_recordings.rs
expression: messages
---
[
    FoldedMessage {
        id: TurnId(
            0,
        ),
        author: User(
            None,
        ),
        parts: NonEmpty {
            inner: [
                Control(
                    SetModel {
                        model: "opus[1m]",
                    },
                ),
            ],
        },
        stop: None,
    },
    FoldedMessage {
        id: TurnId(
            1,
        ),
        author: User(
            Some(
                macro|eric@example.com,
            ),
        ),
        parts: NonEmpty {
            inner: [
                Text(
                    "make a todo list with a b and c. then check off a, then b and c",
                ),
            ],
        },
        stop: None,
    },
    FoldedMessage {
        id: TurnId(
            1,
        ),
        author: Agent,
        parts: NonEmpty {
            inner: [
                ToolUse(
                    ToolUse {
                        id: ToolUseId(
                            "toolu_01VWRTvryJTnQLFGHiTsBXYT",
                        ),
                        label: "ToolSearch",
                        status: Completed,
                        detail: Other {
                            kind: "other",
                            output: Some(
                                "Tool: TaskListTool: CronListTool: ListMcpResourcesToolTool: mcp__macro__ListEntitiesTool: mcp__macro__ListCompanies",
                            ),
                            input: Some(
                                Object {
                                    "query": String("todo list write tasks"),
                                    "max_results": Number(5),
                                },
                            ),
                        },
                    },
                ),
                ToolUse(
                    ToolUse {
                        id: ToolUseId(
                            "toolu_01DCbqRyKnRaqmDNHoFB7MNi",
                        ),
                        label: "ToolSearch",
                        status: Completed,
                        detail: Other {
                            kind: "other",
                            output: Some(
                                "Tool: TaskCreateTool: TaskUpdate",
                            ),
                            input: Some(
                                Object {
                                    "query": String("select:TaskCreate,TaskUpdate"),
                                    "max_results": Number(3),
                                },
                            ),
                        },
                    },
                ),
                Plan(
                    Plan {
                        entries: [
                            PlanEntry {
                                content: "a",
                                priority: Medium,
                                status: Completed,
                            },
                            PlanEntry {
                                content: "b",
                                priority: Medium,
                                status: Completed,
                            },
                            PlanEntry {
                                content: "c",
                                priority: Medium,
                                status: Completed,
                            },
                        ],
                    },
                ),
                Text(
                    "Done — created a, b, c; checked off a, then b and c.",
                ),
            ],
        },
        stop: Some(
            EndTurn,
        ),
    },
]
