crates/agent_fold/src/domain/test/snapshots/agent_fold__domain__test__real_recordings__real_fixtures_derive_their_pinned_metadata@subagent_cursor.jsonl.snap
---
source: crates/agent_fold/src/domain/test/real_recordings.rs
expression: machine.metadata()
input_file: crates/agent_fold/fixtures/real/subagent_cursor.jsonl
---
SessionMetadata {
    harness: Cursor,
    model: Some(
        "default",
    ),
    supported_models: [
        ModelOption {
            id: "auto-smart",
            name: "Auto",
            description: None,
            group: None,
        },
        ModelOption {
            id: "default",
            name: "Auto",
            description: None,
            group: None,
        },
        ModelOption {
            id: "grok-4.6",
            name: "Cursor Grok 4.6",
            description: None,
            group: None,
        },
        ModelOption {
            id: "composer-2.5",
            name: "Composer 2.5",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-opus-5",
            name: "Claude Opus 5",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-opus-4-8",
            name: "Claude Opus 4.8",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gpt-5.6-sol",
            name: "GPT-5.6 Sol",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gpt-5.5",
            name: "GPT-5.5",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-fable-5-1",
            name: "Claude Fable 5.1",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-fable-5",
            name: "Claude Fable 5",
            description: None,
            group: None,
        },
        ModelOption {
            id: "grok-4.5",
            name: "Cursor Grok 4.5",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gemini-3.8-flash",
            name: "Gemini 3.8 Flash",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gemini-3.7-flash",
            name: "Gemini 3.7 Flash",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gpt-5.6-terra",
            name: "GPT-5.6 Terra",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-sonnet-5",
            name: "Claude Sonnet 5",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-sonnet-4-6",
            name: "Claude Sonnet 4.6",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gpt-5.3-codex",
            name: "Codex 5.3",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-opus-4-7",
            name: "Claude Opus 4.7",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gpt-5.4",
            name: "GPT-5.4",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-opus-4-6",
            name: "Claude Opus 4.6",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-opus-4-5",
            name: "Claude Opus 4.5",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gpt-5.2",
            name: "GPT-5.2",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gpt-5.6-luna",
            name: "GPT-5.6 Luna",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gemini-3.6-flash",
            name: "Gemini 3.6 Flash",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gemini-3.1-pro",
            name: "Gemini 3.1 Pro",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gpt-5.4-mini",
            name: "GPT-5.4 Mini",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gpt-5.4-nano",
            name: "GPT-5.4 Nano",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-haiku-4-5",
            name: "Claude Haiku 4.5",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-sonnet-4-5",
            name: "Claude Sonnet 4.5",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gpt-5.1",
            name: "GPT-5.1",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gemini-3-flash",
            name: "Gemini 3 Flash",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gemini-3.5-flash",
            name: "Gemini 3.5 Flash",
            description: None,
            group: None,
        },
        ModelOption {
            id: "claude-sonnet-4",
            name: "Claude Sonnet 4",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gpt-5-mini",
            name: "GPT-5 Mini",
            description: None,
            group: None,
        },
        ModelOption {
            id: "gemini-2.5-flash",
            name: "Gemini 2.5 Flash",
            description: None,
            group: None,
        },
        ModelOption {
            id: "kimi-k3",
            name: "Kimi K3",
            description: None,
            group: None,
        },
        ModelOption {
            id: "kimi-k2.7-code",
            name: "Kimi K2.7 Code",
            description: None,
            group: None,
        },
        ModelOption {
            id: "glm-5.2",
            name: "GLM 5.2",
            description: None,
            group: None,
        },
    ],
    title: None,
    available_commands: [],
    status: Some(
        "acp_ready",
    ),
    pending_interactions: [],
    turn: Idle,
}
