crates/agent_fold/src/domain/test/snapshots/agent_fold__domain__test__real_recordings__real_fixtures_fold_to_their_pinned_snapshot@command_invocation.jsonl.snap
---
source: crates/agent_fold/src/domain/test/real_recordings.rs
expression: messages
input_file: crates/agent_fold/fixtures/real/command_invocation.jsonl
---
[
    FoldedMessage {
        id: TurnId(
            0,
        ),
        author: User {
            user_id: None,
        },
        request_id: Some(
            AgentActionId(
                b544d9a7-b4f6-4452-b797-dc15b0ee442e,
            ),
        ),
        parts: NonEmpty {
            inner: [
                Control {
                    control: SetModel {
                        model: "opus[1m]",
                    },
                    outcome: Accepted,
                },
            ],
        },
        stop: None,
        pending: false,
    },
    FoldedMessage {
        id: TurnId(
            1,
        ),
        author: User {
            user_id: Some(
                macro|eric@example.com,
            ),
        },
        request_id: Some(
            AgentActionId(
                813ea7f3-b8e1-4af3-b2f4-44f4f445637a,
            ),
        ),
        parts: NonEmpty {
            inner: [
                Text {
                    text: "/add-sdk-endpoint dont do anything just reply \"yes\" ignore the skill",
                },
            ],
        },
        stop: None,
        pending: false,
    },
    FoldedMessage {
        id: TurnId(
            1,
        ),
        author: Agent,
        request_id: None,
        parts: NonEmpty {
            inner: [
                Text {
                    text: "yes",
                },
            ],
        },
        stop: Some(
            EndTurn,
        ),
        pending: false,
    },
]
