crates/agent_fold/src/domain/test/snapshots/agent_fold__domain__test__real_recordings__real_fixtures_fold_to_their_pinned_snapshot@real_single_turn.jsonl.snap
---
source: crates/agent_fold/src/domain/test/real_recordings.rs
expression: messages
input_file: crates/agent_fold/fixtures/real/real_single_turn.jsonl
---
[
    FoldedMessage {
        id: TurnId(
            0,
        ),
        author: User {
            user_id: Some(
                macro|eric@example.com,
            ),
        },
        request_id: Some(
            AgentActionId(
                7346b5a4-ae32-46b2-b957-6ba3aad7d474,
            ),
        ),
        parts: NonEmpty {
            inner: [
                Text {
                    text: "hi",
                },
            ],
        },
        stop: None,
        pending: false,
    },
    FoldedMessage {
        id: TurnId(
            0,
        ),
        author: Agent,
        request_id: None,
        parts: NonEmpty {
            inner: [
                Text {
                    text: "Hey! What are we working on today?",
                },
            ],
        },
        stop: Some(
            EndTurn,
        ),
        pending: false,
    },
]
